fix: loop-6 review follow-ups — transport-failure never-throws, shared-Actor race, DTO null-guards, RunClient.metamorph validation, package move, docs
Addresses every item from the loop-6 /review-client verdict: RequestQueueClient.batchAddChunkWithRetries
now catches ApifyClientException (not just ApifyApiException) so transport failures also stay within
the never-throws contract; ActorRunIntegrationTest#lastRunAccess no longer asserts run identity against
the shared apify/hello-world Actor (only presence/status/origin); added last-run- and run-scoped nested
storage GET coverage; null-coalesced every flagged list-returning DTO getter; moved ValidateInputOptions
to com.apify.client.actor next to its only consumer; RunClient.metamorph validates targetActorId; various
docs completeness, comment, and DRY nits. See notes.md "Implementer — loop 7" in apify-client-orchestration
for the itemized list and test evidence.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HuTYpvY6WkVvmsXzupzEk9