@@ -27,8 +27,11 @@ public final class RequestQueueHead extends ApifyResource {
     return hadMultipleClients;
   }
 
-  /** The requests at the head of the queue. */
+  /** The requests at the head of the queue (never {@code null}; unmodifiable). */
   public List<RequestQueueRequest> getItems() {
-    return Collections.unmodifiableList(items);
+    // Null-coalesce: Jackson binds directly to the (private) `items` field for deserialization,
+    // which bypasses the `= List.of()` field initializer whenever the API response contains an
+    // explicit `"items": null`.
+    return items == null ? List.of() : Collections.unmodifiableList(items);
   }
 }
